crates/runtime/tests/podswatcher/snapshots/integration__podswatcher__pods_watcher_assert_after.snap
---
source: crates/runtime/tests/podswatcher/mod.rs
expression: pretty_after
---
+---------------+--------------+--------------+------------+
| table_catalog | table_schema | table_name   | table_type |
+---------------+--------------+--------------+------------+
| spice         | public       | taxi_trips_1 | BASE TABLE |
| spice         | public       | taxi_trips_2 | BASE TABLE |
+---------------+--------------+--------------+------------+
